# oly_agent

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  report_base_v1.0.docx  report_base_v1.0.md  requirements.txt
999_TestData/: test1md.md  test2-2.md  test2.md  test3-2.md  test3_Fault.md  test4_good.md  test5_official_demo.md
agent/: prompt.py  root_agent.py
agent/sub_agents/compliance_check/: ComplianceCheck.py
agent/sub_agents/emotion_check/: EmotionCheck.py
agent/sub_agents/format_check/: FormatCheck.py
agent/sub_agents/grammar_check/: GrammarCheck.py
agent/sub_agents/length_check/: LengthCheck.py
agent/sub_agents/logic_check/: LogicCheck.py
agent/sub_agents/marketing_effect_check/: MarketingEffectCheck.py
agent/sub_agents/sensitive_word/: SensitiveWord.py
agent/sub_agents/seo_check/: SeoCheck.py
agent/sub_agents/user_perspective_check/: UserPerspectiveCheck.py
agent/sub_agents/wrong_word/: WrongWord.py
test_ipynb/: api_call.ipynb
tools/: memory.py  message_validate.py
